--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 27
     buildToolsVersion '27.0.3'
     defaultConfig {
-        applicationId "com.mzc6838.ybroser"
+        applicationId "com.mzc6838.ybrowser"
         minSdkVersion 23
         targetSdkVersion 27
         versionCode 1
