--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,12 +25,12 @@
         </activity>
 
         <activity android:name="com.google.zxing.client.android.CaptureActivity">
-            
         </activity>
 
         <activity android:name=".SettingActivity">
+        </activity>
 
-
+        <activity android:name=".WelcomeActivity">
         </activity>
 
     </application>
