--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     compile 'com.github.fafaldo:fab-toolbar:1.2.0'
     compile 'com.android.support:cardview-v7:27.0.2'
     compile 'com.makeramen:roundedimageview:2.3.0'
+    compile 'com.squareup.okhttp3:okhttp:3.10.0'
 }
