--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,5 @@ dependencies {
     compile 'com.makeramen:roundedimageview:2.3.0'
     compile 'com.squareup.okhttp3:okhttp:3.10.0'
     compile 'com.android.support:recyclerview-v7:27.0.2'
+    compile 'org.litepal.android:core:1.6.1'
 }
