--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
     <uses-permission android:name="android.permission.CAMERA"/>
 
     <application
+        android:name="org.litepal.LitePalApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -35,6 +36,9 @@
         </activity>
 
         <activity android:name=".WelcomeActivity">
+        </activity>
+
+        <activity android:name=".BookmarkActivity">
         </activity>
 
     </application>
