浏览历史功能添加，有严重database bug

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,9 @@
         <activity android:name=".BookmarkActivity">
         </activity>
 
+        <activity android:name=".HistoryActivity">
+        </activity>
+
     </application>
 
 </manifest>
