为用户登录及云同步开端，界面图标美化

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,9 @@
         <activity android:name=".HistoryActivity">
         </activity>
 
+        <activity android:name=".LoginActivity">
+        </activity>
+
     </application>
 
 </manifest>
