--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,6 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.10.0'
     compile 'com.android.support:recyclerview-v7:27.0.2'
     compile 'org.litepal.android:core:1.6.1'
+    compile 'com.github.thinkcool:circletextimageview:1.0.20151218'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
 }
