--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:name="org.litepal.LitePalApplication"
@@ -16,37 +16,29 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
-
+        android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
             android:configChanges="keyboardHidden|screenSize|orientation"
             android:hardwareAccelerated="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
-                <category android:name="android.intent.category.BROWSABLE"/>
+                <category android:name="android.intent.category.BROWSABLE" />
             </intent-filter>
         </activity>
+        <activity android:name="com.google.zxing.client.android.CaptureActivity"></activity>
+        <activity android:name=".SettingActivity"></activity>
+        <activity android:name=".WelcomeActivity"></activity>
+        <activity android:name=".BookmarkActivity"></activity>
+        <activity android:name=".HistoryActivity"></activity>
+        <activity android:name=".LoginActivity"></activity>
 
-        <activity android:name="com.google.zxing.client.android.CaptureActivity">
-        </activity>
-
-        <activity android:name=".SettingActivity">
-        </activity>
-
-        <activity android:name=".WelcomeActivity">
-        </activity>
-
-        <activity android:name=".BookmarkActivity">
-        </activity>
-
-        <activity android:name=".HistoryActivity">
-        </activity>
-
-        <activity android:name=".LoginActivity">
-        </activity>
-
+        <service
+            android:name=".DownloadService"
+            android:enabled="true"
+            android:exported="true"></service>
     </application>
 
 </manifest>
