--- a/gradle.properties
+++ b/gradle.properties
@@ -14,5 +14,7 @@
 # org.gradle.parallel=true
 #Mon Mar 19 10:04:28 CST 2018
 systemProp.http.proxyHost=localhost
+systemProp.https.proxyHost=localhost
 org.gradle.jvmargs=-Xmx1536m
 systemProp.http.proxyPort=1080
+systemProp.https.proxyPort=1080
